@@ -227,11 +227,11 @@ fi
 # Start up the JVM with 1Gb of heap...
 if [ -z ${JAVA_OPTS} ] 
 then
-   export JAVA_OPTS="-XX:MaxPermSize=128M -Xmx1G -ea"
+   export JAVA_OPTS="-Xmx1G -ea"
 fi
 
 ARCH=`uname -m`
-if [[ "$ARCH" = 'x86_64' || "$ARCH" = 'amd64' ]]
+if [ "$ARCH" = "x86_64" ] || [ "$ARCH" = "amd64" ]
 then
   echo "Using 64 bit versions of libraries"
   export LD_LIBRARY_PATH=${TOMCAT_VERSION_FOLDER}/webapps/engine/WEB-INF/lib/native/linux-x86_64:${LD_LIBRARY_PATH}
